# Advent_of_code

./: .gitignore
2019/day01/: functions.cpp  functions.h  main.cpp
2019/day01/tests/: test_main.cpp
2019/day02/: functions.cpp  functions.h  main.cpp
2019/day03/: functions.cpp  functions.h  main.cpp
2019/day04/: functions.cpp  functions.h  main.cpp
2019/day05/: main.cpp
2023/: test.cpp
2023/day01/: main.cpp
2023/day02/: main.cpp
2023/day03/: main.cpp
2023/day04/: main.cpp
2024/: preizkusi.py  test.py
2024/day01/: solution.py
2024/day02/: solution.py
2024/day03/: solution.py
2024/day04/: solution.py
2024/day05/: 5_sorted.py  solution.py
2024/day06/: solution.py
2024/day07/: solution.py
2025/: README.md
2025/day01/: input.txt  main.cpp  readme.md
2025/day02/: functions.cpp  functions.h  main.cpp  readme.md
2025/day03/: functions.cpp  functions.h  main.cpp  readme.md
2025/day04/: main.cpp  readme.md
2025/day05/: main.cpp  readme.md
2025/day06/: main.cpp  readme.md  tempCodeRunnerFile.cpp
2025/day07/: main.cpp  tempCodeRunnerFile.cpp
2025/day08/: functions.cpp  functions.h  main.cpp  readme.md  solution_part2.cpp
2025/day09/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  readme.md  test.txt
2025/day10/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  readme.md
2025/day11/: functions.cpp  functions.h  main.cpp  readme.md  tempCodeRunnerFile.cpp
2025/day12/: CMakeLists.txt  functions.h  main.cpp  readme.md
template/: functions.cpp  functions.h  main.cpp  readme.md
template/tests/: test_main.cpp
(+8 files in other folders)
